# botocore

./: .codecov.yml  .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  NOTICE  README.rst  main_botocore.py  pyproject.toml  requirements-dev-lock.txt  requirements-dev.txt  requirements-docs-lock.txt  requirements-docs.txt  requirements.txt  requirements26.txt  setup.cfg  setup.py  tox.ini
.changes/: 1.10.0.json  1.10.1.json  1.10.10.json  1.10.11.json  1.10.12.json  1.10.13.json  1.10.14.json  1.10.15.json  1.10.16.json  1.10.17.json  1.10.19.json  1.10.2.json  1.10.20.json  1.10.22.json  1.10.23.json  1.10.24.json  1.10.26.json  1.10.27.json  1.10.28.json  1.10.29.json  1.10.30.json  1.10.31.json  1.10.32.json  1.10.33.json  1.10.34.json  1.10.35.json  1.10.36.json  1.10.37.json  1.10.38.json  1.10.39.json  1.10.4.json  1.10.42.json  1.10.43.json  1.10.45.json  1.10.46.json  1.10.47.json  1.10.48.json  1.10.5.json  1.10.50.json  1.10.51.json  (+1454 more)
.changes/next-release/: Enhancement-Endpoints-62816.json  Feature-CredentialProvider-53787.json  api-change-accessanalyzer-5919.json  api-change-acm-99989.json  api-change-acmpca-78475.json  api-change-alexaforbusiness-644.json  api-change-amp-50580.json  api-change-amplify-33834.json  api-change-amplify-86945.json  api-change-amplifybackend-75782.json  api-change-apigateway-98628.json  api-change-apigatewaymanagementapi-98767.json  api-change-apigatewayv2-6430.json  api-change-appconfig-87669.json  api-change-appflow-90106.json  api-change-appintegrations-11961.json  api-change-applicationautoscaling-14490.json  api-change-applicationinsights-72682.json  api-change-appmesh-37584.json  api-change-appstream-54792.json  api-change-appsync-68427.json  api-change-athena-11835.json  api-change-auditmanager-52775.json  api-change-auditmanager-79271.json  api-change-autoscaling-94895.json  api-change-autoscalingplans-40811.json  api-change-backup-40930.json  api-change-backup-51624.json  api-change-batch-41969.json  api-change-braket-40722.json  api-change-braket-61813.json  api-change-budgets-88024.json  api-change-ce-83219.json  api-change-chime-50467.json  api-change-chimesdkmediapipelines-68425.json  api-change-chimesdkmeetings-86132.json  api-change-clients-67111.json  api-change-cloud9-70095.json  api-change-clouddirectory-69813.json  api-change-cloudformation-97039.json  (+691 more)
.github/: CODEOWNERS  codeql.yml  stale_issue.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  guidance-issue.md
.github/workflows/: closed-issue-message.yml  codeql.yml  fail-master-prs.yml  handle-stale-discussions.yml  lint.yml  pull-request-build.yml  release.yml  run-crt-test.yml  run-socks-test.yml  run-tests.yml  run-zip-test.yml  stale_issue.yml  validate-changelog.yml
botocore/: __init__.py  api_rate_manager.py  args.py  auth.py  awsrequest.py  base.py  cacert.pem  client.py  compat.py  compress.py  config.py  configloader.py  configprovider.py  context.py  credentials.py  discovery.py  endpoint.py  endpoint_provider.py  endpoints_v2.py  errorfactory.py  events.py  eventstream.py  exceptions.py  gcpcrypto.py  handlers.py  history.py  hooks.py  http_session.py  httpchecksum.py  httpsession.py  loaders.py  model.py  monitoring.py  operation.py  paginate.py  parameters.py  parsers.py  payload.py  plugin.py  provider.py  (+17 more)
botocore/crt/: __init__.py  auth.py
botocore/data/: _endpoints.json  _retry.json  endpoints.json  partitions.json  sdk-default-configuration.json  test_me.json
botocore/docs/: __init__.py  client.py  codeexamples.py  docstring.py  example.py  method.py  paginator.py  params.py  service.py  shape.py  sharedexample.py  translator.py  utils.py  waiter.py
botocore/retries/: adaptive.py  base.py  bucket.py  quota.py  standard.py  throttling.py
docs/: Makefile  README.md  README.rst
docs/source/: client_upgrades.rst  conf.py  index.rst
scripts/: buildall  get-model-filename  new-change
scripts/ci/: install  install-dev-deps  run-acceptance-tests  run-crt-tests  run-integ-tests  run-socks-tests  run-tests  run-zip-tests
services/: _endpoints.json  _regions.json  _retry.json  autoscaling.extra.json  autoscaling.json  cloudformation.extra.json  cloudfront.extra.json  cloudfront.json  cloudsearch.extra.json  cloudsearch.json  cloudsearchdomain.json  cloudtrail.extra.json  cloudtrail.json  cloudwatch.extra.json  cloudwatch.json  cognito-identity.json  cognito-sync.json  datapipeline.extra.json  directconnect.extra.json  directconnect.json  dynamodb.extra.json  dynamodb.json  ec2.extra.json  ec2.json  elasticache.extra.json  elasticache.json  elasticbeanstalk.extra.json  elasticbeanstalk.json  elastictranscoder.extra.json  elastictranscoder.json  elb.extra.json  elb.json  emr.extra.json  emr.json  gce.json  iam.extra.json  iam.json  importexport.extra.json  kinesis.extra.json  kinesis.json  (+28 more)
tests/: __init__.py  cmd-runner  test_sqs.py
tests/functional/: __init__.py  conftest.py  test_account_id_endpoints.py  test_alias.py  test_apigateway.py  test_auth_config.py  test_bedrock_runtime.py  test_block_fips.py  test_cliargumentname_config.py  test_client.py  test_client_class_names.py  test_client_metadata.py  test_cloudformation.py  test_cloudsearchdomain.py  test_cognito_idp.py  test_compress.py  test_compression.py  test_config_provider.py  test_context_params.py  test_credentials.py  test_disable_s3_express_auth.py  test_discovery.py  test_docdb.py  test_dsql.py  test_dynamodb.py  test_ec2.py  test_ecs.py  test_endpoint_rulesets.py  test_endpoints.py  test_event_alias.py  test_eventbridge.py  test_events.py  test_h2_required.py  test_history.py  test_httpchecksum.py  test_iot_data.py  test_kinesis.py  test_lex.py  test_loaders.py  test_machinelearning.py  (+40 more)
tests/integration/: test_apigateway.py  test_client.py  test_client_http.py  test_cloudformation.py  test_cloudwatch.py  test_cognito_identity.py  test_credentials.py  test_ec2.py  test_elastictranscoder.py  test_emr.py  test_gce.py  test_gcs.py  (+11 more)
(+2251 files in other folders)
