[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "botocore"
dynamic = ["version"]
description = "Low-level, data-driven core of boto 3."
readme = "README.rst"
authors = [{name = "Amazon Web Services"}]
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "jmespath>=1.0.0,<2.0.0",
    "python-dateutil>=2.1,<3.0.0",
    "urllib3>=2.4.0,<3",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
crt = ["awscrt==0.31.2"]
dev = [
    "wheel==0.46.3",
    "behave==1.2.5",
    "jsonschema==4.23.0",
    "coverage==7.2.7",
    "setuptools==71.1.0;python_version>='3.12'",
    "packaging==24.1;python_version>='3.12'",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.5.0",
    "atomicwrites>=1.0",
    "colorama>0.3.0",
]
docs = [
    "sphinx==7.4.7",
    "furo==2024.08.06",
    "sphinx_copybutton==0.5.1",
    "sphinx-remove-toctrees==0.0.3",
]

[project.urls]
Homepage = "https://github.com/boto/botocore"

[tool.setuptools.dynamic]
version = {attr = "botocore.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow",
    "validates_models: marks tests as one which validates service models",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Format same as Black.
line-length = 79
indent-width = 4

[tool.ruff.lint]
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4", # pycodestyle
    "E7", # pycodestyle
    "E9", # pycodestyle
    "F", # Pyflakes
    "I", # Import sorting
    "UP", # PyUpgrade
    "G", # Log formatting
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings, spaces for indents
# and trailing commas.
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.coverage.run]
branch = true
omit = ["botocore/vendored/*"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError.*"
]
include = [
    "botocore/*"
]

[tool.tox]
env_list = ["py310","py311","py312","py313","py314"]
no_package = true
env_run_base.commands = [
    ["{tox_root}/scripts/ci/install"],
    ["{tox_root}/scripts/ci/run-tests"],
]

[tool.pyright]
reportMissingTypeStubs = false
reportPrivateUsage = false
