[bdist_wheel]
universal = 1

[metadata]
requires-dist =
    python-dateutil>=2.1,<2.7.0; python_version=="2.6"
    python-dateutil>=2.1,<2.8.1; python_version>="2.7"
    jmespath>=0.7.1,<1.0.0
    docutils>=0.10,<0.16
    ordereddict==1.1; python_version=="2.6"
    simplejson==3.3.0; python_version=="2.6"
    urllib3>=1.20,<1.23; python_version=="3.3"
    urllib3>=1.20,<1.24; python_version=="2.6"
    urllib3>=1.20,<1.26; python_version=="2.7"
    urllib3>=1.20,<1.26; python_version>="3.4"
