[bdist_wheel]
universal = 0

[metadata]
requires_dist =
    python-dateutil>=2.1,<3.0.0
    jmespath>=0.7.1,<2.0.0; python_version>'3.6'
    jmespath>=0.7.1,<1.0.0; python_version<='3.6'
    urllib3>=1.25.4,<1.27

[options.extras_require]
crt = awscrt==0.13.8

[flake8]
ignore = E203,E226,E501,E731,W503,W504
