[bdist_wheel]
universal = 0

[metadata]
requires_dist =
    jmespath>=0.7.1,<2.0.0
    python-dateutil>=2.1,<3.0.0
    urllib3>=1.25.4,<1.27; python_version<"3.10"
    urllib3>=1.25.4,!=2.2.0,<3; python_version>="3.10"

[options.extras_require]
crt = awscrt==0.20.9

[flake8]
ignore = E203,E226,E501,E731,W503,W504
